# plotter

./: CMakeLists.txt  README.md  main.cpp
parser/: InputParser.cpp  InputParser.h
ui/: AppUI.cpp  AppUI.h  AppUI.ui
widgets/: Calculations.cpp  Calculations.h
widgets/GTE/chart/: GTEChart.cpp  GTEChart.h
widgets/GTE/view/: GTEChartView.cpp  GTEChartView.h
widgets/LTE/chart/: LTEChart.cpp  LTEChart.h
widgets/LTE/view/: LTEChartView.cpp  LTEChartView.h
widgets/solution/chart/: SolutionChart.cpp  SolutionChart.h
widgets/solution/view/: SolutionChartView.cpp  SolutionChartView.h
widgets/step/: StepLabel.cpp  StepLabel.h
